<resources>
    <string name="app_name">BSPU</string>
    <!-- menu -->
    <string name="stringMonday">Понедельник</string>
    <string name="stringTuesday">Вторник</string>
    <string name="stringWednesday">Среда</string>
    <string name="stringThursday">Четверг</string>
    <string name="stringFriday">Пятница</string>
    <string name="stringSaturday">Суббота</string>

    <!-- menu -->
    <string name="stringBSPU">О БГПУ</string>
    <string name="stringNews">Новости</string>
    <string name="stringTimetable">Расписание</string>
    <string name="stringCalculator">Калькулятор</string>
    <string name="stringChat">Чат</string>
    <string name="stringSettings">Настройки</string>
    <string name="stringSections">Cекции</string>
    <string name="stringNFC">Баллы</string>

    <!--    fragment_registration   -->
    <string name="stringRegistration">Зарегистрироваться</string>
    <string name="stringPassword">Пароль</string>
    <string name="stringEmail">E-mail</string>
    <string name="stringEnter">Войти</string>
    <string name="stringRegist">Регистрация</string>
    <string name="title_activity_timetable">ActivityTimetable</string>
    <string name="title_activity_news">ActivityNews</string>
    <string name="large_text">
       23 октября в Уфе начала работу XII Международная научно-практическая конференция «Идеалы и ценности ислама в образовательном пространстве XXI века», проходящая в рамках IV Евразийского гуманитарного форума.\n\n

Главная  идея  данной конференции заключается  в  обсуждении  стратегических перспектив развития духовного образования, критическом разборе достижений и актуальных  вопросов  развития  религиозного  мировоззрения в современном обществе в условиях глобализации.\n\n

В открытии конференции приняли участие Глава Башкортостана Радий Фаритович Хабиров и Верховный муфтий, председатель Центрального духовного управления мусульман России Шей-уль-Ислам Талгат Сафа Таджуддин, ректор Российского исламского университета ЦДУМ России Артур Русланович Сулейманов.\n\n

Открывая пленарное заседание конференции, ректор Башкирского государственного педагогического университета им. М. Акмуллы Салават Сагитов отметил:\n\n

- Наша общая задача сегодня - донесение до людей благотворных идеалов и ценностей ислама. Она двуедина по своему содержанию, так как относится и к духовному, собственно мусульманскому, и к общему, светскому образованию. На решение данной проблемы ориентирует нас и Президент Российской Федерации В.В. Путин, который отметил, что «для успешного противостояния глобальным вызовам времени необходимо обеспечить высокий авторитет отечественного мусульманского духовенства и российской исламской богословской школы». Именно на решение этой задачи должны быть направлены мероприятия по совершенствованию системы исламского образования в России, развитию научных исследований в области религиоведения, популяризация подлинных гуманистических ценностей ислама и других традиционных религий, несущих мир и свет.\n\n

Со словами приветствия к участникам конференции обратился глава РБ Радий Хабиров:\n\n

 - Тема конференции исключительно важна для нас сегодня. Башкортостан, как и вся наша страна, является общим домом для многих народов и вероисповеданий. Наш край является официальным центром российского ислама, здесь сформировались богатые традиции подготовки мусульманской интеллигенции. Мусульмане всегда были надежной опорой отечества. Национальное, культурное многообразие  и одновременно единство наших народов дают нам мощное конкурентное преимущество для России в современном мире. Мы сегодня должны опираться на межнациональное и межрелигиозное согласие, развивать государственно-конфессиональное сотрудничество, в том числе в образовательной сфере. Мы с вами должны эффективно противостоять религиозному экстремизму, беречь наш межконфессиональный мир и согласие, не дать расшатать извне традиции добрососедства, взаимного уважения и веротерпимости, которые всегда были сильной стороной нашего края.\n\n

От имени Центрального духовного управления мусульман России участников приветствовал Верховный муфтий, председатель Центрального духовного управления мусульман России Шей-уль-Ислам Талгат Сафа Таджуддин.\n\n

Также с приветственным словом выступил Гришкин Виталий Викторович, заместитель директора Департамента молодежной политики и социальных проектов в сфере высшего образования Министерства науки и высшего образования РФ.\n\n

Организаторами XII Международной научно-практической конференции «Идеалы и ценности ислама в образовательном пространстве XXI века» выступают  Башкирский государственный педагогический  университет  имени  М. Акмуллы, Российский исламский университет  Центрального духовного управления мусульман России и Центральное духовное управление мусульман России при содействии Федерации Университетов  Исламского  Мира ИСЕСКО (ФУИМ ИСЕСКО), Совета по государственно-конфессиональным отношениям при Главе  Республики Башкортостан.\n\n

Конференция проходит 23-24 октября и включает несколько дискуссионных площадок.\n\n

В форуме участвуют представители делегаций из Иордании, Египта, Туниса, Турции, Индии, Марокко, Сирии, Казахстана Кыргызстана, Таджикистана, Узбекистана, представители федеральных и республиканских органов государственной власти, руководители светских и религиозных образовательных учреждений Москвы, Санкт-Петербурга, Казани, Пятигорска, Владикавказа, Тюмени, Хабаровска, Челябинска, Екатеринбурга, Волгограда, Астрахани, Нальчика, Махачкалы, Уфы и других регионов России и мира, руководители духовных управлений мусульман регионов России, руководители медресе и мактабов, научная и вузовская общественность. В работе конференции принимают участие более 500 человек, представлено более 300 докладов и научных статей.\n\n
    </string>
    <string name="action_settings">Settings</string>

    <string-array name="listFaculty">
        <item>Факультет</item>
        <item>ЕГФ</item>
        <item>ИИПО</item>
        <item>ИП</item>
        <item>ИПОИТ</item>
        <item>ФМФ</item>
        <item>ИФОМК</item>
        <item>СГФ</item>
        <item>ФБФ</item>
        <item>ФП</item>
        <item>ФФК</item>
        <item>ХГФ</item>
    </string-array>


    <string-array name="listITEMS">
        <item>Предмет</item>
        <item>Русский язык</item>
        <item>Математика</item>
        <item>Физика</item>
        <item>Химия</item>
        <item>История</item>
        <item>Обществознание</item>
        <item>Информатика </item>
        <item>Биология</item>
        <item>География</item>
        <item>Иностранные языки</item>
        <item>Литература </item>
    </string-array>


    <string-array name="listCourse">
        <item>Курс</item>
        <item>1 курс</item>
        <item>2 курс</item>
        <item>3 курс</item>
        <item>4 курс</item>
    </string-array>

    <string-array name="listRole">
        <item>Тип пользователя</item>
        <item>Студент</item>
        <item>Преподаватель</item>
    </string-array>

    <string-array name="listSpecialty">
        <item>Специальность</item>
        <item>ИВТКТ-11-19</item>
        <item>ИСИТ-12-19</item>
        <item>ИВТКТ-21-18</item>
        <item>ИСИТ-21-18</item>
        <item>ЗПОБС-21-18</item>
        <item>ЗМПОЭБ-31-17</item>
        <item>ИВ 11-19</item>
        <item>ПО ОВ 11-19</item>
        <item>ЗСЛГС-41-16</item>
    </string-array>
    <string name="title_activity_enrollee">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
