<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ActivityMain">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:paddingBottom="16dp"
        android:text="@string/stringRegist"
        android:textAlignment="center"
        android:textColor="@color/colotWhite"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="62dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/editTextName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1px"
                            android:layout_weight="1"
                            android:background="@drawable/style_edit_top"
                            android:ems="10"
                            android:gravity="center_vertical"
                            android:hint="Имя"
                            android:inputType="textEmailAddress"
                            android:padding="12dp"
                            android:paddingStart="10dp"
                            android:textColor="@color/darkText"
                            tools:ignore="RtlSymmetry" />

                        <EditText
                            android:id="@+id/editTextLastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/style_edit"
                            android:ems="10"
                            android:gravity="center_vertical"
                            android:hint="Фамилия"
                            android:inputType="textEmailAddress"
                            android:padding="12dp"
                            android:paddingStart="10dp"
                            android:textColor="@color/darkText"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>

                </LinearLayout>

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1px"
                    android:layout_marginBottom="1px"
                    android:layout_weight="1"
                    android:background="@drawable/style_edit"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/stringEmail"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/darkText"
                    tools:ignore="RtlSymmetry" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1px"
                        android:background="@drawable/style_edit"
                        android:hint="@string/stringPassword"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:paddingStart="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/spinnerRole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1px"
                    android:layout_weight="1"
                    android:background="@drawable/style_edit"
                    android:entries="@array/listRole"
                    android:padding="12dp"
                    android:paddingStart="2dp"
                    android:textSize="36sp" />

                <Spinner
                    android:id="@+id/spinnerСourse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1px"
                    android:layout_weight="1"
                    android:background="@drawable/style_edit"
                    android:entries="@array/listCourse"
                    android:padding="12dp"
                    android:paddingStart="2dp"
                    android:textSize="36sp" />

                <Spinner
                    android:id="@+id/spinnerFaculty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1px"
                    android:background="@drawable/style_edit"
                    android:entries="@array/listFaculty"
                    android:padding="12dp"
                    android:paddingStart="2dp"
                    android:textSize="36sp" />

                <Spinner
                    android:id="@+id/spinnerSpecialty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1px"
                    android:layout_weight="1"
                    android:background="@drawable/style_edit_bot"
                    android:entries="@array/listSpecialty"
                    android:padding="12dp"
                    android:paddingStart="2dp"
                    android:textSize="36sp" />

            </LinearLayout>

            <Button
                android:id="@+id/textViewRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:layout_weight="1"
                android:background="@drawable/style_button"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/stringRegistration"
                android:textAllCaps="false"
                android:textColor="@color/colotWhite"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:srcCompat="@drawable/system_back" />

</androidx.constraintlayout.widget.ConstraintLayout>